-fix responsive layout issues -replace favicon

--- a/src/components/congrats-section/congrats-section.module.css
+++ b/src/components/congrats-section/congrats-section.module.css
@@ -17,6 +17,9 @@
 }
 
 @media screen and (max-width: 600px) {
+  .section {
+    background-size: 38%;
+  }
   .congratsHeading {
     width: 90%;
   }
