--- a/src/components/navigation/button/button.module.css
+++ b/src/components/navigation/button/button.module.css
@@ -30,7 +30,8 @@
 @media screen and (max-width: 600px) {
   .button {
     width: 80%;
+    transform: translateY(50);
   }
 }
 
-/* TODO: change all to REM */
+/* TODO: change all to same unit */
