--- a/src/components/page-bodies/game-page/game-page.module.css
+++ b/src/components/page-bodies/game-page/game-page.module.css
@@ -24,12 +24,16 @@
 
 .bottomNavigation {
   width: 100%;
-  height: 80px;
+  height: 60px;
   position: fixed;
   bottom: 0;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.75);
   z-index: 2;
+}
+
+.buttonContainer {
+  transform: translateY(-50%);
 }
 
 @media screen and (max-width: 1250px) {
